--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,8 @@ dependencies:
   intl: ^0.17.0
   flutter_icons: ^1.1.0
   shared_preferences: ^2.0.6
-  localstore: ^1.2.0
+  sqflite:
+  path:
 
 dev_dependencies:
   flutter_test:
